# ipfs-effector

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  test.sh  validate.sh
.github/workflows/: release.yml  tests.yml
cid/: Cargo.toml  built.rs
cid/src/: lib.rs
effector/: Cargo.toml  module.yaml
effector/src/: import.rs  main.rs  utils.rs
effector/test_artifacts/: Config.toml
imports/: Cargo.toml
types/: Cargo.toml
