[package]
name = "ipfs-effector-types"
version = "0.1.0"
edition = "2021"
publish = true
description = "IPFS Effector Types"
license = "Apache-2.0"
authors = ["Fluence Labs"]
repository = "https://github.com/fluencelabs/ipfs-effector"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
marine-rs-sdk = { workspace = true }
